--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+      
+      - name: Setup theme
+        run: |
+          npm install
+          npm i -g postcss-cli
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
