--- a/data/fr/site.yaml
+++ b/data/fr/site.yaml
@@ -1,27 +1,26 @@
 # Copyright
-copyright: © 2022
+copyright: © Timothé Chauvet, 2022
 
 # Disclaimer
-disclaimer: "Thème Hugo Toha sous licence MIT. Contenu sous licence CC BY-NC 4.0."
+disclaimer: Thème Hugo Toha sous licence MIT. Contenu sous licence CC BY-NC 4.0.
 
-# Meta description for your site.  This will help the search engines to find your site.
-description: Portfolio and personal blog of John Doe.
+# Description
+description: Blog, carte de visite et site internet personnel de Timothé Chauvet.
 
-# specify the list of custom menus that you want to show in the top navbar.
-# they will be separated by a divider from the main menus.
+# Menus
 customMenus:
-- name: Docs
-  url: https://toha-guides.netlify.app/posts/
-  # specify whether to hide the menu item from top navbar or not.
-  hideFromNavbar: false
-  # specify whether to show the menu item in footer or not.
-  # if you set it to true, make sure you have set `footer.navigation.customMenus: true` in your config.yaml
-  showOnFooter: false
+# - name: Docs
+#   url: https://toha-guides.netlify.app/posts/
+#   # specify whether to hide the menu item from top navbar or not.
+#   hideFromNavbar: false
+#   # specify whether to show the menu item in footer or not.
+#   # if you set it to true, make sure you have set `footer.navigation.customMenus: true` in your config.yaml
+#   showOnFooter: false
 
 # Specify OpenGraph Headers
 openGraph:
-  title: John's Blog
+  title: Blog de Timothé Chauvet
   type: website
-  description: Portfolio and personal blog of John Doe.
-  image: images/author/john.png
-  url: https://hugo-toha.github.io
+  description: Site personnel et blog de Timothé Chauvet
+  image: images/cover/cover.jpg
+  url: https://timothechau.vet
