--- a/config.yaml
+++ b/config.yaml
@@ -89,7 +89,7 @@ params:
         linkedin: true
         email: true
     notes:
-      enable: true
+      enable: false
     comment:
       enable: false
     analytics:
