--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,15 +1,14 @@
-# Sample workflow for building and deploying a Hugo site to GitHub Pages
-name: Deploy Hugo site to Pages
+# Workflow for building and deploying a Hugo site to GitHub Pages
+name: 🤖 Deploy Hugo site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: 
+      - master
+  # Manual deployment
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# GitHub Pages deployment allowed for GITHUB_TOKEN
 permissions:
   contents: read
   pages: write
@@ -20,7 +19,6 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-# Default to bash
 defaults:
   run:
     shell: bash
@@ -30,41 +28,42 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.102.3
+      HUGO_VERSION: 0.105.0
     steps:
-      - name: Install Hugo CLI
+      - name: ✨ Setup Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      - name: Checkout
+      - name: 📩 Checkout
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: Setup Pages
+      - name: 📄 Setup Pages
         id: pages
         uses: actions/configure-pages@v2
-      - name: Build with Hugo
+      - name: ⚙️ Build with Hugo
         env:
-          # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
-      - name: Upload artifact
+      - name: 📤 Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./public
 
   # Deployment job
   deploy:
+    # Condition to deploy only if commit contains "major", "push", "deploy" or "publish"
+    if: contains(github.event.head_commit.message, fromJson('["push", "major", "deploy", "publish"]'))
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: 🚀 Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
