--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,6 +26,8 @@ defaults:
 jobs:
   # Build job
   build:
+    # Condition to deploy only if commit contains "deploy"
+    if: contains(github.event.head_commit.message.toLowerCase(), 'deploy'))
     runs-on: ubuntu-latest
     env:
       HUGO_VERSION: 0.105.0
@@ -56,8 +58,8 @@ jobs:
 
   # Deployment job
   deploy:
-    # Condition to deploy only if commit contains "major", "push", "deploy" or "publish"
-    if: contains(github.event.head_commit.message, fromJson('["push", "major", "deploy", "publish"]'))
+    # Condition to deploy only if commit contains "deploy"
+    if: contains(github.event.head_commit.message.toLowerCase(), 'deploy'))
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
