New pic, using webp

--- a/data/fr/author.yaml
+++ b/data/fr/author.yaml
@@ -4,7 +4,7 @@ nickname: Timothé Chauvet
 
 # Greetings & background
 # greeting: "👋 je suis"
-image: images/author/tim.jpg
+image: images/author/photo.webp
 
 # Footer contact
 contactInfo:
