--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -4,7 +4,7 @@ nickname: Timothé Chauvet
 
 # Greetings & background
 # greeting: "👋 I am"
-image: images/author/tim.jpg
+image: images/author/photo.webp
 
 # Footer contact
 contactInfo:
