hosting article first edit

--- a/data/en/sections/03-experiences.yaml
+++ b/data/en/sections/03-experiences.yaml
@@ -18,8 +18,8 @@ experiences:
   - designation: Cloud Engineer / DevOps consultant
     start: Oct 2022
     responsibilities:
-    - Azure Cloud Engineer Azure currently in inter-contract
-    - DP-900 and AZ-500 certification training
+    - Web app migration assessment for [Egis](https://www.egis-group.com/)
+    - FinOps move-to-cloud assessment for [Egis](https://www.egis-group.com/)
 
   - designation: DevOps Engineer intern
     start: Apr 2022
