--- a/data/fr/sections/03-experiences.yaml
+++ b/data/fr/sections/03-experiences.yaml
@@ -18,8 +18,8 @@ experiences:
   - designation: Consultant Cloud Engineer / DevOps
     start: Oct 2022
     responsibilities:
-    - Cloud Engineer Azure actuellement en intercontrat
-    - Formation aux certifications DP-900 et AZ-500
+    - Évaluation de migration applicative vers Web App pour [Egis](https://www.egis-group.com/fr)
+    - Évaluation FinOps de migration cloud pour [Egis](https://www.egis-group.com/fr)
 
   - designation: Stagiaire DevOps Engineer
     start: Avr 2022
