--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,17 +30,19 @@ jobs:
     env:
       HUGO_VERSION: 0.110.0
     steps:
-      - name: ✨ Setup Hugo CLI
+      - name: ✨ Setup CLIs and dependencies
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb && sudo snap install dart-sass-embedded
       - name: 📩 Checkout
         uses: actions/checkout@v3
         with:
           submodules: recursive
       - name: 📄 Setup Pages
         id: pages
-        uses: actions/configure-pages@v2
+        uses: actions/configure-pages@v3
+      - name: 📦 Install Node.js dependencies
+        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: ⚙️ Build with Hugo
         env:
           HUGO_ENVIRONMENT: production
