--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,6 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       HUGO_VERSION: 0.110.0
+    environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
