--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,9 +29,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       HUGO_VERSION: 0.110.0
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: ✨ Setup CLIs and dependencies
         run: |
@@ -58,6 +55,15 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./public
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: 🚀 Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v2
