Edit email address

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -8,7 +8,7 @@ image: images/author/photo.webp
 
 # Footer contact
 contactInfo:
-  email: timothe@chauvet.dev
+  email: timothe@chauvet.cloud
   linkedin: timothechauvet
   twitter: 
     icon: twitter
