--- a/data/en/sections/01-about.yaml
+++ b/data/en/sections/01-about.yaml
@@ -15,7 +15,7 @@ summary: I am a recent graduate of [Efrei](https://efrei.fr/), the digital schoo
 socialLinks:
 - name: Email
   icon: fas fa-envelope
-  url: timothe@chauvet.dev
+  url: timothe@chauvet.cloud
 
 - name: Github
   icon: fab fa-github
