--- a/data/fr/sections/01-about.yaml
+++ b/data/fr/sections/01-about.yaml
@@ -15,7 +15,7 @@ summary: Je suis tout récemment diplômé de [l'Efrei](https://efrei.fr/), l'é
 socialLinks:
 - name: Email
   icon: fas fa-envelope
-  url: timothe@chauvet.dev
+  url: timothe@chauvet.cloud
 
 - name: Github
   icon: fab fa-github
