--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -28,5 +28,5 @@ summary:
   - ❤️ Electronic music
   - ❤️ Learn new languages 🇬🇧 🇨🇳 🇪🇸 🇮🇹
   - ❤️ Azure
-  - ❤️ GitHub
+  - ❤️ Scripting
   - ❤️ Design
