--- a/data/fr/author.yaml
+++ b/data/fr/author.yaml
@@ -28,5 +28,5 @@ summary:
   - ❤️ Musique électronique
   - ❤️ Apprendre des langues 🇬🇧 🇨🇳 🇪🇸 🇮🇹
   - ❤️ Azure
-  - ❤️ GitHub
+  - ❤️ Scripting
   - ❤️ Design
