--- a/data/fr/sections/03-experiences.yaml
+++ b/data/fr/sections/03-experiences.yaml
@@ -10,6 +10,19 @@ section:
 # Experiences
 experiences:
 - company:
+    name: Carrefour
+    url: https://carrefour.com/
+    location: Massy
+    overview: Carrefour est un des leaders mondiaux de la grande distribution
+  positions:
+  - designation: Ops front & back (Devoteam)
+    start: Avr 2023
+    responsibilities:
+    - Run, build, résolution d'incidents et astreintes
+    - Migrations (Git->git, IaaS->PaaS, Kubernetes...)
+    - Jenkins, GitLab CI, Ansible, Helm, Terraform...
+
+- company:
     name: Devoteam M Cloud
     url: https://mcloud.devoteam.com/fr/
     location: Levallois-Perret
@@ -18,7 +31,9 @@ experiences:
   - designation: Consultant DevOps & Cloud
     start: Avr 2023
     responsibilities:
-    - Run client chez [Carrefour](https://www.carrefour.com)
+    - Mission chez Carrefour
+    - Accompagnement des stagiaires
+    - Rayonnement de l'entreprise
 
   - designation: Consultant Apps Engineer
     start: Oct 2022
