Fix designation of Carrefour

--- a/data/en/sections/03-experiences.yaml
+++ b/data/en/sections/03-experiences.yaml
@@ -15,7 +15,7 @@ experiences:
     location: Massy
     overview: Carrefour is one of the global leaders in retail
   positions:
-  - designation: Ops front & back (Devoteam)
+  - designation: Ops middleware & back-end (Devoteam)
     start: Apr 2023
     responsibilities:
     - Run, build, troubleshooting and on-call duty
