--- a/data/fr/sections/03-experiences.yaml
+++ b/data/fr/sections/03-experiences.yaml
@@ -15,7 +15,7 @@ experiences:
     location: Massy
     overview: Carrefour est un des leaders mondiaux de la grande distribution
   positions:
-  - designation: Ops front & back (Devoteam)
+  - designation: Ops middleware & back-end (Devoteam)
     start: Avr 2023
     responsibilities:
     - Run, build, résolution d'incidents et astreintes
