🧹 Update about page

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -26,7 +26,6 @@ summary:
   - ❤️ Cloud
   - ❤️ Open Source Software
   - ❤️ Electronic music
-  - ❤️ Learn new languages 🇬🇧 🇨🇳 🇪🇸 🇮🇹
+  - ❤️ Train people
   - ❤️ Azure
-  - ❤️ Scripting
   - ❤️ Design
