--- a/data/fr/author.yaml
+++ b/data/fr/author.yaml
@@ -26,7 +26,6 @@ summary:
   - ❤️ Cloud
   - ❤️ Open Source Software
   - ❤️ Musique électronique
-  - ❤️ Apprendre des langues 🇬🇧 🇨🇳 🇪🇸 🇮🇹
+  - ❤️ Former
   - ❤️ Azure
-  - ❤️ Scripting
   - ❤️ Design
