--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,23 +27,40 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
-    env:
-      HUGO_VERSION: 0.110.0
     steps:
-      - name: ✨ Setup CLIs and dependencies
-        run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb && sudo snap install dart-sass-embedded
-      - name: 📩 Checkout
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+      
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          submodules: recursive
-      - name: 📄 Setup Pages
+          node-version: 18
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v3.0.0
+        with:
+          hugo-version: 0.139.5
+          extended: true
+
+      - name: Update hugo modules
+        run: |
+          # update to latest version of all modules
+          hugo mod get -u
+
+          # update the npm dependencies
+          hugo mod npm pack
+
+          # cleanup go.sum file
+          hugo mod tidy
+      
+      - name: Install node modules
+        run: npm install
+
+      - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
-      - name: 📦 Install Node.js dependencies
-        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
-      - name: ⚙️ Build with Hugo
+
+      - name: Build with Hugo
         env:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
@@ -51,7 +68,8 @@ jobs:
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
-      - name: 📤 Upload artifact
+      
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./public
