--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,18 @@
 baseURL: https://timothechau.vet/
 
 title: "Timothé Chauvet"
-theme: "toha"
+module:
+  imports:
+  - path: github.com/hugo-toha/toha/v4
+  mounts:
+  - source: static/files
+    target: static/files
+  - source: ./node_modules/flag-icon-css/flags
+    target: static/flags
+  - source: ./node_modules/@fontsource/mulish/files
+    target: static/files
+  - source: ./node_modules/katex/dist/fonts
+    target: static/fonts
 
 # Manage languages
 # Doc : https://gohugo.io/content-management/multilingual/
@@ -49,30 +60,19 @@ params:
   logo:
     main: /images/logo/favicon.png
     inverted: /images/logo/favicon.png
-    favicon: /images/logo/favicon.png
-  
-  # Enable dark theme
-  darkMode:
-    provider: darkreader
-    enable: true
-    default: system
-  
+    favicon: /images/logo/favicon.png  
 
   # Enable features
   features:
-    # ToC
+    darkMode:
+      enable: true
     toc:
       enable: true
-    
-    # Tags
     tags:
       enable: true
       on_card: true
-    
-    # Flags
     flags:
       enable: true
-
     # Site categories
     portfolio:
       enable: true
