Update Hugo et Toha

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3.0.0
         with:
-          hugo-version: 0.139.5
+          hugo-version: 'latest'
           extended: true
 
       - name: Update hugo modules
@@ -54,7 +54,9 @@ jobs:
           hugo mod tidy
       
       - name: Install node modules
-        run: npm install
+        run: |
+          npm install
+          npm audit fix --force
 
       - name: Setup Pages
         id: pages
