--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,19 +29,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.1.1
-      
-      - name: Setup Node
-        uses: actions/setup-node@v4
+        uses: actions/checkout@v4
         with:
-          node-version: 20
+          submodules: true
+          fetch-depth: 0
+      
+      # - name: Setup Node
+      #   uses: actions/setup-node@v4
+      #   with:
+      #     node-version: 20
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
+        uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: 'latest'
+          hugo-version: '0.119.0'
           extended: true
-
+            
       - name: Update hugo modules
         run: |
           # update to latest version of all modules
