--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,20 +1,16 @@
-# Workflow for building and deploying a Hugo site to GitHub Pages
 name: 🤖 Deploy Hugo site to Pages
 
 on:
   push:
     branches: 
       - master
-  # Manual deployment
   workflow_dispatch:
 
-# GitHub Pages deployment allowed for GITHUB_TOKEN
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -24,7 +20,6 @@ defaults:
     shell: bash
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -33,11 +28,6 @@ jobs:
         with:
           submodules: true
           fetch-depth: 0
-      
-      # - name: Setup Node
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: 20
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3.0.0
@@ -82,5 +72,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: 🚀 Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
