Gh actions testing

--- a/config.yaml
+++ b/config.yaml
@@ -91,6 +91,9 @@ params:
       enable: false
     analytics:
       enable: true
+      services:
+        goatCounter:
+          code: timothechauvet
 
   # Footer
   footer:
