--- a/data/fr/sections/04-education.yaml
+++ b/data/fr/sections/04-education.yaml
@@ -11,7 +11,7 @@ section:
 degrees:
 - name: Formateur Microsoft MCT
   icon: fa-graduation-cap
-  timeframe: Depuis 2023
+  timeframe: Oct 2023
   institution:
     name: Cellenza Training
     url: https://training.cellenza.com
