--- a/data/en/sections/04-education.yaml
+++ b/data/en/sections/04-education.yaml
@@ -11,7 +11,7 @@ section:
 degrees:
 - name: Microsoft MCT Trainer
   icon: fa-graduation-cap
-  timeframe: Since 2023
+  timeframe: Oct 2023
   institution:
     name: Cellenza Training
     url: https://training.cellenza.com
