--- a/data/en/sections/01-about.yaml
+++ b/data/en/sections/01-about.yaml
@@ -11,7 +11,8 @@ designation: Cloud Engineer
 summary: |
   I graduated [Efrei](https://eng.efrei.fr/), the digital engineering school, with a master's degree in 2022 🎓 
 
-  I love to share my passion of Azure and aspire to become a Cloud Architect 
+  I love to code during my free time and small projects, and sometimes I write in my blog what I'm doing just in case it helps somebody out there 
+
 socialLinks:
 - name: Email
   icon: fas fa-envelope
