--- a/data/en/sections/04-education.yaml
+++ b/data/en/sections/04-education.yaml
@@ -29,7 +29,7 @@ degrees:
     - name: Being professional in face-to-face and distance training 
     - name: Using Microsoft MCT tools
 
-- name: Diploma in computer engineering
+- name: Master's in computer engineering
   icon: fa-graduation-cap
   timeframe: 2017-2022
   institution:
