--- a/data/fr/sections/04-education.yaml
+++ b/data/fr/sections/04-education.yaml
@@ -29,7 +29,7 @@ degrees:
     - name: Etre professionnel en formation présentielle comme distancielle 
     - name: Utiliser les outils Microsoft pour les MCT
   
-- name: Diplôme d'ingénieur informatique
+- name: Master en ingénierie informatique
   icon: fa-graduation-cap
   timeframe: 2017-2022
   institution:
